# credible-intervals-jax

./: .gitignore  LICENSE  README.md  pyproject.toml  test_vmap_mcmc.py
data/: generate_simulation_data.py  generate_toy_data.py  simulation_results.csv
models/: contaminated.py  normal.py  student_t.py
notebooks/: 01_toy_data_violins.ipynb  02_toy_data_plots.ipynb  03_sim_data_plots.ipynb
src/inference/: runner.py
src/models/: __init__.py  bootstrap.py  normal.py  student_t.py
