[project]
name = "credible-intervals-jax"
version = "0.1.0"
description = "Unofficial JAX reproduction of 'Not every credible interval is credible' (Kennedy et al.)"
readme = "README.md"
license = "MIT"
requires-python = ">= 3.12"

dependencies = [
    "jax>=0.10.2",
    "jaxlib>=0.10.2",
    "numpyro>=0.21.0",
    "numpy>=2.5.0",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
    "pandas>=3.0.3",
    "joblib>=1.5.3",
    "tqdm>=4.68.3",
    "scipy>=1.18.0",
    "ipykernel>=7.3.0",
]
